More code in bold

--- a/files/en-us/learn/server-side/django/home_page/index.html
+++ b/files/en-us/learn/server-side/django/home_page/index.html
@@ -288,7 +288,8 @@ This code extends our base template on the first line, and then replaces the def
   &lt;/ul&gt;
 {% endblock %}</pre>
 
-<p>In the <em>Dynamic content</em> section we declare placeholders (<em>template variables</em>) for the information from the view that we want to include. The variables are enclosed with double brace (handlebars), as shown in bold in the code sample. </p>
+<p>In the <em>Dynamic content</em> section we declare placeholders (<em>template variables</em>) for the information from the view that we want to include.
+The variables are enclosed with double brace (handlebars).</p>
 
 <div class="notecard note">
   <p><strong>Note:</strong> You can easily recognize template variables and template tags (functions) - variables are enclosed in double braces (<code>\{{ num_books }}</code>), and tags are enclosed in single braces with percentage signs (<code>{% extends "base_generic.html" %}</code>).</p>
