--- a/files/en-us/learn/server-side/django/testing/index.html
+++ b/files/en-us/learn/server-side/django/testing/index.html
@@ -733,7 +733,8 @@ def renew_book_librarian(request, pk):
 
 <p>We'll need to test that the view is only available to users who have the <code>can_mark_returned</code> permission, and that users are redirected to an HTTP 404 error page if they attempt to renew a <code>BookInstance</code> that does not exist. We should check that the initial value of the form is seeded with a date three weeks in the future, and that if validation succeeds we're redirected to the "all-borrowed books" view. As part of checking the validation-fail tests we'll also check that our form is sending the appropriate error messages.</p>
 
-<p>Add the first part of the test class (shown below) to the bottom of <strong>/catalog/tests/test_views.py</strong>. This creates two users and two book instances, but only gives one user the permission required to access the view. The code to grant permissions during tests is shown in bold:</p>
+<p>Add the first part of the test class (shown below) to the bottom of <strong>/catalog/tests/test_views.py</strong>.
+This creates two users and two book instances, but only gives one user the permission required to access the view.</p>
 
 <pre class="brush: python">import uuid
 
